# from-jupyter-to-production-baseimage

./: .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml
.github/actions/shared-build-steps/: action.yml
.github/workflows/: main.yml
configs/: jupyter_lab_config.py  jupyter_notebook_config.py  jupytext.toml
docker/code-server/: Dockerfile  docker-entrypoint.sh  pyproject.toml  settings.json
docker/dagster/: Dockerfile  dagster.yaml  workspace.yaml
docker/jupyter/: Dockerfile
docker/mlflow/: Dockerfile  init-mlflow.sh
docker/registry/: Dockerfile  init-registry.sh
