[tool.poetry]
name = "workshop"
version = "23.10.13"
description = "Baseimage used in the workshop 'from jupyter to production'"
authors = ["codecentric"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = ">4"
pillow = ">=10"
pandas = ">=2"
mlflow = ">=2.7"
scikit-learn = ">=1.3"
opencv-python = ">=4.8"
dvc = ">=3.22"
jupyterlab-lsp = "^5.0.0"
python-lsp-server = {extras = ["all"], version = "^1.8.2"}
jupyter-lsp = "^2.2.0"
dagster = "^1.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
