[tool.poetry]
name = "workshop"
version = "23.10.13"
description = "Baseimage used in the workshop 'from jupyter to production'"
authors = ["codecentric"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
jupyterlab = ">4"
pillow = ">=10"
pandas = ">=2"
scikit-learn = ">=1.3"
opencv-python = ">=4.8"
dvc = ">=3.22"
jupyterlab-lsp = "^5.0.0"
python-lsp-server = {extras = ["all"], version = "^1.8.2"}
jupyter-lsp = "^2.2.0"
jupytext = "^1.15.2"
pygit2 = "^1.13.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
onnxruntime = "^1.16.1"
skl2onnx = "^1.15.0"
tqdm = "^4.66.1"
seaborn = "^0.13.0"
xgboost = "^2.0.3"
jupyterlab-code-formatter = "^2.2.1"
black = "^24.3.0"

[tool.poetry.group.dagster.dependencies]
dagster-webserver = "^1.8.7"
dagster-postgres = "^0.24.7"
requests-toolbelt = "0.10.1"
urllib3 = "1.26.15"
dagster = "^1.8.0"
dagster-mlflow = "^0.24.7"


[tool.poetry.group.mlflow.dependencies]
mlflow = ">=2.7"




[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
